<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Motion">

    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="275dp"
        android:layout_height="35dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:text="User"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnDisconnect"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:backgroundTint="#8C1818"
        android:text="@string/disconnect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <TextView
        android:id="@+id/txtWatts"
        android:layout_width="358dp"
        android:layout_height="39dp"
        android:text="@string/watts"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@android:drawable/editbox_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.268" />

    <TextView
        android:id="@+id/txtMeters"
        android:layout_width="358dp"
        android:layout_height="39dp"
        android:text="@string/meters"
        android:textAlignment="center"
        android:textColor="#009688"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@android:drawable/editbox_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384" />

    <TextView
        android:id="@+id/txtCalories"
        android:layout_width="358dp"
        android:layout_height="39dp"
        android:text="@string/calories"
        android:textAlignment="center"
        android:textColor="#EF6C00"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@android:drawable/editbox_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtMaxWattage"
        android:layout_width="184dp"
        android:layout_height="85dp"
        android:text="@string/max_wattage"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="#E91E63"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@android:drawable/editbox_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818" />

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="184dp"
        android:layout_height="85dp"
        android:text="@string/time"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="#43A047"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@android:drawable/editbox_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818" />

</androidx.constraintlayout.widget.ConstraintLayout>